SFDC_Learning/src/objects/Episod__c.object
<CustomObject>
    <fields>
        <fullName>Episode_Number__c</fullName>
        <label>Episode Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <label>Production</label>
        <referenceTo>Production__c</referenceTo>
        <relationshipLabel>Episods</relationshipLabel>
        <relationshipName>Episods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Episod</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Episod Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Episods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>